--- a/references.bib
+++ b/references.bib
@@ -108,6 +108,16 @@
   Timestamp                = {2015.10.04}
 }
 
+@Article{androidArchAnalysis,
+  Title                    = {Analysis of the Android Architecture},
+  Author                   = {Stefan Brahler},
+  Journal                  = {karlsruhe institute of technology},
+  Year                     = {2010},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
 @InProceedings{Gamification_on_Participation,
   Title                    = {Effects of Gamification on Participation and Data Quality in a Real-World Market Research Domain},
   Author                   = {Jared Cechanowicz and Carl Gutwin and Briana Brownell and Larry Goodfellow},
@@ -685,6 +695,16 @@
   Timestamp                = {2015.10.03}
 }
 
+@Article{mvpPotel,
+  Title                    = {MVP: Model-View-Presenter},
+  Author                   = {Mike Potel},
+  Journal                  = {Taligent},
+  Year                     = {1996},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
+}
+
 @Book{prenskyGamification,
   Title                    = {Digital Game-Based Learning},
   Author                   = {Marc Prensky},
@@ -731,6 +751,16 @@ MDA is a formal approach to understanding games {\OE} one which attempts to brid
   Location                 = {Toronto, Ontario, Canada},
   Numpages                 = {4},
   Url                      = {http://doi.acm.org/10.1145/2583008.2583033}
+}
+
+@Book{androidHacks,
+  Title                    = {50 Android Hacks},
+  Author                   = {Carlos Sessa},
+  Publisher                = {Manning Publications},
+  Year                     = {2013},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.11}
 }
 
 @Article{shaver2007impact,
