--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -16,10 +16,7 @@
 
 \section{Front-End}
 	\subsection{Αρχιτεκτονική}
-		\subsubsection{MVVP σχεδιαστικό μοτίβο}
-		
-		
-		\subsubsection{MVC σχεδιαστικό μοτίβο}
+		\subsubsection{MVC αρχιτεκτονικό πρότυπο}\label{sssection:mvc}
 
 		Το σχεδιαστικό μοτίβο Model View Controller (MVC) είναι ένα αρχιτεκτονικό πρότυπο που χρησιμοποιείται στην τεχνολογία λογισμικού και συνήθως στην υλοποίηση web εφαρμογών. Χωρίζει την εφαρμογή σε τρία διασυνδεδεμένα μέρη, με σκοπό τον πλήρη διαχωρισμό της εσωτερικής αναπαράστασης  της πληροφορίας στο σύστημα από τους τρόπους παρουσίασης της πληροφορίας στον χρήστη. Το MVC αποτελείται από τρία στοιχεία: α) Model, β) View, γ) Controller.
 		\begin{itemize} 
@@ -38,10 +35,49 @@
 		Η  χρήση της αρχιτεκτονικής MVC κατά την δημιουργία μίας εφαρμογής μας προσφέρει τα εξής βασικά πλεονεκτήματα:
 		\begin{itemize}
 		\item Διαχωρισμός των προβλημάτων (Separation of Concerns). Ουσιαστικά δημιουργείται μία εφαρμογή η οποία έχει τρία επίπεδα(models, views, controllers) και το κάθε επίπεδο επιτελεί ξεχωριστό έργο και ταυτόχρονα συνεργάζεται με τα άλλα επίπεδα. Στην σωστή υλοποίηση πρέπει τα τρία επίπεδα να είναι πλήρως καθορισμένα και να μην συμπλέκονται. Ο διαχωρισμός αυτός, επιτρέπει την επαναχρησιμοποίηση της επιχειρηματικής λογικής σε διάφορες εφαρμογές και την ανάπτυξη πολλαπλών user interfaces χωρίς να προβληματιζόμαστε από τον κώδικα που διαχειρίζεται την βάση.
-		\item Επεκτασιμότητα (Scaleability). Είναι η δυνατότητα που διαθέτει μία εφαρμογή , να μπορούμε μελλοντικά να προσθέσουμε λειτουργίες σε αυτή ή να αλλάξουμε κάποιες από τις ήδη υπάρχουσες λειτουργίες με σκοπό να επιτύχουμε διαφορετικά αποτελέσματα. 
-		\item Ελεγξιμότητα (Testability). Οι MVC εφαρμογές έχουν την δυνατότητα να είναι πιο εύκολα ελέγξιμες και με τον τρόπο αυτό συντηρούνται πιο εύκολα.  Εφόσον τα συστατικά της αρχιτεκτονικής είναι διακριτά είναι πιο εύκολο να γράφουμε κώδικα που να τεστάρει ξεχωριστά το κάθε κομμάτι, γρήγορα και αποτελεσματικά.
-		\item Παράλληλη ανάπτυξη από διαφορετικές ομάδες. Οι προγραμματιστές επιχειρηματικής λογικής  μπορούν να δημιουργούν τις κλάσεις, ενώ οι προγραμματιστές του user interface μπορούν να σχεδιάζουν ταυτόχρονα τις οθόνες. Επίσης μπορούν να γίνονται ενημερώσεις και αλλαγές στο user interface χωρίς να επιβραδύνεται η διαδικασία του business logic.
+		\item \textbf{Επεκτασιμότητα (Scaleability)}. Είναι η δυνατότητα που διαθέτει μία εφαρμογή , να μπορούμε μελλοντικά να προσθέσουμε λειτουργίες σε αυτή ή να αλλάξουμε κάποιες από τις ήδη υπάρχουσες λειτουργίες με σκοπό να επιτύχουμε διαφορετικά αποτελέσματα. 
+		\item \textbf{Ελεγξιμότητα (Testability)}. Οι MVC εφαρμογές έχουν την δυνατότητα να είναι πιο εύκολα ελέγξιμες και με τον τρόπο αυτό συντηρούνται πιο εύκολα.  Εφόσον τα συστατικά της αρχιτεκτονικής είναι διακριτά είναι πιο εύκολο να γράφουμε κώδικα που να τεστάρει ξεχωριστά το κάθε κομμάτι, γρήγορα και αποτελεσματικά.
+		\item \textbf{Παράλληλη ανάπτυξη από διαφορετικές ομάδες}. Οι προγραμματιστές επιχειρηματικής λογικής  μπορούν να δημιουργούν τις κλάσεις, ενώ οι προγραμματιστές του user interface μπορούν να σχεδιάζουν ταυτόχρονα τις οθόνες. Επίσης μπορούν να γίνονται ενημερώσεις και αλλαγές στο user interface χωρίς να επιβραδύνεται η διαδικασία του business logic.
 		\end{itemize}
+		
+	\subsubsection{MVP αρχιτεκτονικό πρότυπο}
+	Το αρχιτεκτονικό πρότυπο Model View Presenter (MVP) αποτελεί ένα παράγωγο αρχιτεκτονικό πρότυπο του MVC \cite{mvpPotel}, το οποίο είναι πολύ δημοφιλές στην ανάπτυξη εφαρμογών για το λειτουργικό σύστημα Android. Στην θεωρία τουλάχιστον, οι εφαρμογές Android είναι στημένες με την λογική του MVC \cite{androidArchAnalysis} όπως περιγράφηκε στην ενότητα \ref{sssection:mvc}, με το Activity ή το Fragment να αποτελεί τον controller και τα xml layouts τα views. Στην πράξη όμως καταλήγει η πλειονότητα του view logic να βρίσκεται στο Activity το οποίο το μετατρέπει σε δομή model-view όπως φαίνεται στο σχήμα \ref{fig:model_view}, κάτι το οποίο σε καμία περίπτωση δεν είναι το επιθυμητό. Στόχος λοιπόν του MVP είναι να λύσει ακριβώς αυτό το πρόβλημα και να πετύχει πλήρη διαχωρισμό μεταξύ του view και του view logic όπως βλέπουμε στο σχήμα \ref{fig:mvp_pattern}.
+		
+	 \begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{model_view.png}
+	    \caption{Android Model-View αρχιτεκτονικό πρότυπο}
+	    \label{fig:model_view}
+	\end{figure}
+	
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{mvp_pattern.png}
+	    \caption{Android MVP αρχιτεκτονικό πρότυπο}
+	    \label{fig:mvp_pattern}
+	\end{figure}
+	
+	Πλεονεκτήματα και λόγοι χρήσης του αρχιτεκτονικού προτύπου Model View Presenter\cite{androidHacks}:
+	\begin{itemize}
+		\item \textbf{Επεκτασιμότητα} η οποία επιτυγχάνεται μέσω του πλήρη διαχωρισμού μεταξύ της εμφάνισης (view) και της λογικής της εμφάνισης (view logic). 
+		\item \textbf{Ευκολία Testing} του κάθε στρώματος (layer) της εφαρμογής αφού έχουμε πετύχει σαφή διαχωρισμό μεταξύ τους. Εν γένει η χρήση του μοτίβου MVP προάγει το test driven development της εφαρμογής με όλα τα πλεονεκτήματα που συνεπάγεται η εν λόγω τεχνική ανάπτυξης.
+	\end{itemize}
+	
+	Το αρχιτεκτονικό πρότυπο MVP όπως δηλώνει και το όνομα του αποτελείται από τα παρακάτω τρία στοιχεία α) Model β) View γ) Presenter :
+	\begin{itemize}
+		\item \textbf{Model: } Το model στο αρχιτεκτονικό πρότυπο MVP επιτελεί της ίδιες λειτουργίες με αυτές στο MVC όπως περιγράφηκαν παραπάνω στην ενότητα \ref{sssection:mvc}.
+		\item \textbf{View: } Το view υλοποιείται συνήθως μέσω κάποιου Activity ή Fragment (εξαρτάται από την συγκεκριμένη αρχιτεκτονική της εφαρμογής), και περιέχει αναφορά στον presenter ο οποίος το χειρίζεται. H εν λόγω αναφορά πραγματοποιείται με χρήση του σχεδιαστικού μοτίβου dependency injection και ιδανικά με χρήση του Dagger. Κάθε φορά που ο χρήστης αλληλεπιδρά με κάποια λειτουργία (π.χ κουμπί) του view, καλείται η αντίστοιχη συνάρτηση του presenter ο οποίος επικοινωνεί με το model και λέει εν τέλει στο view τι θα εμφανίσει.
+		\item \textbf{Presenter: } Ο Presenter είναι λειτουργεί ως το ενδιάμεσο στάδιο - ενορχηστρωτής μεταξύ του view και του model. Είναι υπεύθυνος για την απόκτηση των δεδομένων από το model και την παρουσίαση τους στο view, αλλά σε αντίθεση με την κλασσική αρχιτεκτονική MVC είναι υπεύθυνος για τις αλλαγές που γίνονται στο view όταν ο χρήστης αλληλεπιδρά μαζί του.
+	\end{itemize}
+	
+	Για να αποσαφηνιστεί πλήρως η λειτουργία του και να γίνει πιο εύκολα κατανοητό στο σχήμα \ref{fig:mvp_workflow} βλέπουμε ένα χαρακτηριστικό παράδειγμα.
+	
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{mvp_workflow.png}
+	    \caption{Παράδειγμα MVP σε Android}
+	    \label{fig:mvp_workflow}
+	\end{figure}
 
 	\subsection{Frameworks}
 	
