Add blank glossary section

--- a/thesis.tex
+++ b/thesis.tex
@@ -146,9 +146,7 @@
 
 \includepdf[scale=0.65, pages={1}, pagecommand=\chapter{Ερωτηματολόγιο Αιμοδότη}]{Appendix/donor_questionnaire.pdf} 
 
-\chapter{Ευρετήριο συμβολισμών}
-
-$A \rightarrow B$ : συνάρτηση από το πεδίο $A$ στο πεδίο $B$.
+\include{glossary}
 
 \chapter{Ευρετήριο γλωσσών}
 
