Add a sentence about cloud in abstract

--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -1,12 +1,18 @@
 \graphicspath{ {Figures/technology_stack/} }
 \chapter{Τεχνολογίες}\label{ch:Development Stack}
 \section{Back-End}
-	\subsection{Hosting - Cloud}
+	\subsection{Cloud}
+	Μοντέλα υπηρεσιών
 		\subsubsection{IaaS}
 		\subsubsection{PaaS}
 		\subsubsection{SaaS}
 		\subsubsection{BaaS}
 			Γιατί Parse ?
+	Μοντέλα ανάπτυξης
+		\subsubsection{Private cloud}
+		\subsubsection{Community cloud}
+		\subsubsection{Public cloud}
+		\subsubsection{Hybrid cloud}
 		\subsubsection{NodeJs}
 		\subsubsection{Cloud και ασφάλεια Ιατρικών δεδομένων?}
 	\subsection{Βάση Δεδομένων}
