Stack technology -Bootstrap

--- a/references.bib
+++ b/references.bib
@@ -873,9 +873,19 @@ URN: urn:nbn:de:0114-fqs0501297},
   Timestamp                = {2015.10.03}
 }
 
+@Electronic{bootstrap,
+  Title                    = {Bootstrap},
+  Author                   = {Wikipedia},
+  Url                      = {https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.10}
+}
+
 @Electronic{Framework,
-  Title                    = {https://en.wikipedia.org/wiki/Softwareframework},
-  Author                   = {Wikipaidia},
+  Title                    = {Software Framework},
+  Author                   = {Wikipedia},
+  Url                      = {https://en.wikipedia.org/wiki/Softwareframework},
 
   Owner                    = {revekka},
   Timestamp                = {2015.10.08}
