--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -96,9 +96,9 @@
 		
 		\subsubsection{Angular}
 		Το AngularJS είναι ένα από τα πιο δημοφιλή ανοιχτού κώδικα JavaScript framework που χρησιμοποιείται για την κατασκευή και τη δομή σύγχρονων διαδικτυακών εφαρμογών, κυρίως εφαρμογών μίας σελίδας. Αναπτύχθηκε από την Google και από μία κοινότητα προγραμματιστών για την αντιμετώπιση των πολλών προκλήσεων που ανέκυψαν κατά την ανάπτυξη των εφαρμογών μίας σελίδας.  Στόχος του είναι να απλοποιήσει τόσο την ανάπτυξη όσο και το testing αυτών των εφαρμογών, παρέχοντας ένα framework για client-side model-View-Controller (MVC) και το model-view-viewmodel (MVVM) αρχιτεκτονικές, μαζί με τα συστατικά που χρησιμοποιούνται συνήθως στις εφαρμογές Διαδικτύου.
-	   \\
+	   \\*
 			    \textbf{Αρχιτεκτονική}
-	 \\	
+	 \\*
 		Κατά την εκκίνηση της εφαρμογής, το πρόγραμμα περιήγησης φορτώνει το HTML αρχείο και το παρσάρει στο DOM αρχείο, και μαζί με αυτό στο angular.js script. Μόλις το DOM αρχείο έχει φορτωθεί, το AngularJS αναζητά την εντολή ng-app η οποία ορίζει τα όρια της εφαρμογής. Εάν ορίζεται κάποιο module μέσα στην οδηγία, τότε χρησιμοποιείται για να ρυθμιστεί το \$injector, που δημιουργεί τo \$compile service καθώς και το \$ rootScope. Τότε μεταγλωττίζεται το DOM και συνδέεται στο \$ rootScope μετά από το οποίο εκτελούνται οι υπόλοιπες εντολές (αν υπάρχουν). Στο σχήμα \ref{fig:angularjs} φαίνεται ο κύκλος εκκίνησης του AngularJS.
 	  \begin{figure}[h]
 	    \centering
@@ -143,14 +143,22 @@
 	\end{itemize}
 
 
-		\subsubsection{JQuery}
+
 
 		\subsubsection{Bootstrap}
 	Το bootstrap είναι ένα πάρα πολύ δυνατό front-end framework για την ταχύτερη και ευκολότερη ανάπτυξη ιστοσελίδων. Είναι μία συλλογή εργαλείων ανοιχτού κώδικα και περιλαμβάνει HTML και βασισμένα στο CSS πρότυπα σχεδιασμού για κοινά στοιχεία διεπαφής χρήστη, όπως τυπογραφίας, φόρμες, κουμπιά, πίνακες, dropdowns, alerts, μπάρες, και πολλά άλλα, καθώς και προαιρετικές επεκτάσεις JavaScript.Το bootstrap είναι συμβατό με όλες τις τελευταίες εκδόσεις των προγραμμάτων πλοήγησης και υποστηρίζει "responsive web design". Αυτό σημαίνει πως η διάταξη των ιστοσελίδων προσαρμόζεται δυναμικά, λαμβάνοντας υπόψιν τα χαρακτηριστικά της συσκευής που το χρησιμοποιεί (σταθερός υπολογιστής, κινητό, τάμπλετ κλπ.). 
 	
 	Το bootstrap είναι modular και αποτελείται από μικρότερα LESS stylesheets τα οποία υλοποιούν τα διάφορα στοιχεία του πακέτου εργαλείων. Ένα stylesheet, με όνομα bootstrap.less περιλαμβάνει τα επιμέρους stylesheets. Οι προγραμματιστές μπορούν να προσαρμόσουν και οι ίδιοι το bootstrap, καθώς τους δίνεται η δυνατότητα να επιλέξουν τα στοιχεία που θέλουν να χρησιμοποιήσουν. Αναπροσαρμογές γίνονται σε περιορισμένο όμως βαθμό, μέσω ενός κεντρικού stylesheet. Πιο ουσιαστικές αλλαγές πραγματοποιούνται με LESS δηλώσεις. Η χρήση των LESS stylesheets επιτρέπει τη χρήση μεταβλητών, συναρτήσεων καθώς και mixins. Επιπλέον, ο σχεδιαστής μπορεί να επιλέγει σε μια φόρμα τα επιθυμητά στοιχεία και να τα προσαρμόζει, σε τιμές διαφόρων εναλλακτικών λύσεων για τις ανάγκες του. Στη συνέχεια δημιουργείται ένα πακέτο που περιλαμβάνει ήδη το προ-χτισμένο CSS stylesheet.
 	
-	Το bootstrap παρέχει ένα σύνολο από stylesheets που παρέχουν βασικούς ορισμούς στυλ για όλα τα βασικά HTML στοιχεία με. Αυτά παρέχουν ενιαία, σύγχρονη εμφάνιση για πίνακες, μορφοποίηση κειμένου, καθώς και για τα στοιχεία μιας φόρμας. Επιπλέον των HTML στοιχείων, το bootstrap περιέχει και άλλα στοιχεία περιβάλλοντος τα οποία χρησιμοποιούνται συχνά. Αυτά περιλαμβάνουν κουμπιά με προηγμένα χαρακτηριστικά ( π.χ. ομαδοποίηση κουμπιών ή drop-down επιλογή, οριζόντιες και κάθετες καρτέλες, σελιδοποίηση, κ.λ.π. ), ετικέτες, προηγμένες τυπογραφικές δυνατότητες, εικονίδια, προειδοποιητικά μηνύματα και μια γραμμή προόδου. Τέλος, το bootstrap περιέχει πολλά συστατικά JavaScript σε μια μορφή jQuery plugin. Παρέχουν πρόσθετα στοιχεία διεπαφής χρήστη όπως παράθυρα διαλόγου, επεξηγήσεις, και καρουσέλ. Μπορούν επίσης να επεκτείνουν τη λειτουργικότητα ορισμένων υφιστάμενων στοιχείων της διασύνδεσης, όπως για παράδειγμα μια αυτόματη πλήρη λειτουργία για πεδία εισαγωγής.
+	Το bootstrap παρέχει ένα σύνολο από stylesheets που παρέχουν βασικούς ορισμούς στυλ για όλα τα βασικά HTML στοιχεία με. Αυτά παρέχουν ενιαία, σύγχρονη εμφάνιση για πίνακες, μορφοποίηση κειμένου, καθώς και για τα στοιχεία μιας φόρμας. Επιπλέον των HTML στοιχείων, το bootstrap περιέχει και άλλα στοιχεία περιβάλλοντος τα οποία χρησιμοποιούνται συχνά. Αυτά περιλαμβάνουν κουμπιά με προηγμένα χαρακτηριστικά ( π.χ. ομαδοποίηση κουμπιών ή drop-down επιλογή, οριζόντιες και κάθετες καρτέλες, σελιδοποίηση, κ.λ.π. ), ετικέτες, προηγμένες τυπογραφικές δυνατότητες, εικονίδια, προειδοποιητικά μηνύματα και μια γραμμή προόδου. Τέλος, το bootstrap περιέχει πολλά συστατικά JavaScript σε μια μορφή jQuery plugin. Παρέχουν πρόσθετα στοιχεία διεπαφής χρήστη όπως παράθυρα διαλόγου, επεξηγήσεις, και καρουσέλ. Μπορούν επίσης να επεκτείνουν τη λειτουργικότητα ορισμένων υφιστάμενων στοιχείων της διασύνδεσης, όπως για παράδειγμα μια αυτόματη πλήρη λειτουργία για πεδία εισαγωγής. \cite{bootstrap}
+	Τα πιο σημαντικά πλεονεκτήματα που προκύπτουν από την χρήση του bootstrap είναι:
+	\begin{itemize}
+	\item Ταχύτητα ανάπτυξης. Αδιαμφισβήτητα, ένα από τα σημαντικότερα πλεονεκτήματα της χρήσης του bootstrap είναι η ταχύτητα της ανάπτυξης. Το bootstrap παρέχει την δυνατότητα χρήσης έτοιμων μπλοκ κώδικα , έτσι ώστε να γίνεται η αρχή του front -end από εκεί και να μην χρειάζεται να γραφτεί κώδικας  από το μηδέν ("from scratch"). Το άνωθεν σε συνδυασμό με την συμβατότητα σε όλα τα προγράμματα περιήγησης που προσφέρει καθώς και τις λειτουργίες του CSS-LESS, εξοικονομεί πολύτιμο χρόνο στους προγραμματιστές.
+	\item Ανταπόκριση. Λόγω του διαρκώς αυξανόμενου αριθμού των κινητών συσκευών υπάρχει η ανάγκη να έχουμε διαδραστικές ιστοσελίδες.Το bootstrap διευκολύνει πάρα πολύ την δημιουργία οθονών για κινητά χάρη στη ρευστή διάταξη πλέγματος που έχει που προσαρμόζεται δυναμικά στην κατάλληλη ανάλυση οθόνης και δεν χρειάζεται να κάνουμε επιπλέον δουλεία για να πετύχουμε την σωστή αποκρισιμότητα.
+	\item Συνοχή. Το bootstrap βασίζεται σε αυτή την αρχή καθώς αρχικά αναπτύχθηκε από μερικούς υπαλλήλους του Twitter ως ένα framework για να υπάρχει συνέπεια μεταξύ των εσωτερικών εργαλείων που χρησιμοποιούνταν. 
+Το bootstrap ουσιαστικά χτίστηκε ώστε να "ταιριάζει" τους σχεδιαστές με τους προγραμματιστές και να διασφαλίζει τη συνέπεια, ανεξάρτητα του ποιος εργάζεται στο έργο ή σε ποια πλατφόρμα θα τρέξει.
+	\item Προσαρμόσιμα. Το bootstrap, μπορεί να προσαρμοστεί σύμφωνα με τις προδιαγραφές του κάθε έργου. Οι προγραμματιστές έχουν τη δυνατότητα να επιλέξουν τα χαρακτηριστικά που χρειάζονται και να πετάξουν τα υπόλοιπα.
+	\end{itemize}
 
 		
 	\subsection{Express και Jade Template Engine}
