Stack technology -cloud

--- a/references.bib
+++ b/references.bib
@@ -32,16 +32,6 @@
   Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4260297/}
 }
 
-@Book{Benkler2006,
-  Title                    = {The Wealth of Networks},
-  Author                   = {Yochai Benkler},
-  Publisher                = {Yale University Press},
-  Year                     = {2006},
-
-  Owner                    = {ilias},
-  Timestamp                = {2015.10.10}
-}
-
 @Article{Bolton-Maggs2013,
   Title                    = {Transfusion safety in 2012: main messages from the SHOT Annual Report for 2012},
   Author                   = {Bolton-Maggs, P. H. B.},
@@ -50,8 +40,6 @@
   Number                   = {4},
   Pages                    = {217--218},
   Volume                   = {23},
-
-  __markedentry            = {[ilias:6]},
   ISSN                     = {1365-3148},
   Owner                    = {ilias},
   Publisher                = {Blackwell Publishing Ltd},
@@ -108,16 +96,6 @@
   Timestamp                = {2015.10.04}
 }
 
-@Article{androidArchAnalysis,
-  Title                    = {Analysis of the Android Architecture},
-  Author                   = {Stefan Brahler},
-  Journal                  = {karlsruhe institute of technology},
-  Year                     = {2010},
-
-  Owner                    = {ilias},
-  Timestamp                = {2015.10.11}
-}
-
 @InProceedings{Gamification_on_Participation,
   Title                    = {Effects of Gamification on Participation and Data Quality in a Real-World Market Research Domain},
   Author                   = {Jared Cechanowicz and Carl Gutwin and Briana Brownell and Larry Goodfellow},
@@ -140,6 +118,16 @@
   Doi                      = {10.1109/IEMBS.2001.1019587},
   ISSN                     = {1094-687X},
   Keywords                 = {ISO standards;document handling;electrocardiography;groupware;health care;medical information systems;middleware;open systems;telemedicine;Clinical Document Architecture;DICOM 3;HL7/CDA framework;ISO standard;SCP-ECG;WebOnCOLL collaboration infrastructure;cardiology;clinical document templates;clinical documents;deployment;design;emerging telemedicine protocols;exchanged clinical content;guidelines;healthcare settings;imaging;interoperability;medical specialties;medical standards;middleware services;open standards;physical setting;regional healthcare networks;remote consultation services;specifications;telemedicine services;Biomedical imaging;Collaborative work;DICOM;Electrocardiography;Guidelines;ISO standards;Medical services;Middleware;Protocols;Telemedicine}
+}
+
+@Article{characteristicsCloud,
+  Title                    = {The Characteristics of Cloud Computing},
+  Author                   = {Chunye Gong, Jie Liu, Qiang Zhang, Haitao Chen and Zhenghu Gong},
+  Journal                  = {39th International Conference on Parallel Processing Workshops},
+  Year                     = {2010},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.11}
 }
 
 @Electronic{bloodDonationDefinition,
@@ -304,7 +292,6 @@
 }
 
 @Article{1973,
-  Title                    = {The Gift Relationship: From Human Blood to Social Policy},
   Author                   = {Feingold, Eugene},
   Journal                  = {Medical Care},
   Year                     = {1973},
@@ -371,6 +358,18 @@
   Timestamp                = {2015.10.04}
 }
 
+@Article{nist,
+  Title                    = {The NIST Definition of Cloud
+Computing},
+  Author                   = {Peter Mell
+Timothy Grance},
+  Journal                  = {Special Publication 800-145},
+  Year                     = {2011},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.11}
+}
+
 @Article{filloKivernisews,
   Title                    = {Ministerial directive Υ4γ-ΟΙΚ.121672-2009},
   Author                   = {Government of Greece},
@@ -419,6 +418,24 @@
   Timestamp                = {2015.10.09}
 }
 
+@Article{Haghighat2015,
+  Title                    = {CloudID: Trustworthy cloud-based and cross-enterprise biometric identification },
+  Author                   = {Mohammad Haghighat and Saman Zonouz and Mohamed Abdel-Mottaleb},
+  Journal                  = {Expert Systems with Applications },
+  Year                     = {2015},
+  Number                   = {21},
+  Pages                    = {7905 - 7916},
+  Volume                   = {42},
+
+  __markedentry            = {[revekka:6]},
+  Doi                      = {http://dx.doi.org/10.1016/j.eswa.2015.06.025},
+  ISSN                     = {0957-4174},
+  Keywords                 = {Biometric identification},
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.11},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S0957417415004273}
+}
+
 @InProceedings{6758978,
   Title                    = {Does Gamification Work? -- A Literature Review of Empirical Studies on Gamification},
   Author                   = {Hamari, J. and Koivisto, J. and Sarsa, H.},
@@ -459,23 +476,6 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.08}
-}
-
-@Article{Kaplan201059,
-  Title                    = {Users of the world, unite! The challenges and opportunities of Social Media },
-  Author                   = {Andreas M. Kaplan and Michael Haenlein},
-  Journal                  = {Business Horizons },
-  Year                     = {2010},
-  Number                   = {1},
-  Pages                    = {59 - 68},
-  Volume                   = {53},
-
-  Doi                      = {http://dx.doi.org/10.1016/j.bushor.2009.09.003},
-  ISSN                     = {0007-6813},
-  Keywords                 = {Social Media},
-  Owner                    = {ilias},
-  Timestamp                = {2015.10.09},
-  Url                      = {http://www.sciencedirect.com/science/article/pii/S0007681309001232}
 }
 
 @Article{landsteinerABO,
@@ -663,6 +663,16 @@
   Timestamp                = {2015.09.29}
 }
 
+@Article{cloudComputing,
+  Title                    = {Cloud Computing and Interoperability in Healthcare Information Systems},
+  Author                   = {Oana-Sorina Lupşe, Mihaela Marcella Vida, Lăcrămioara Stoicu-Tivadar},
+  Journal                  = {INTELLI 2012 : The First International Conference on Intelligent Systems and Applications},
+  Year                     = {2012},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.11}
+}
+
 @Book{bloodDonorSelection,
   Title                    = {Blood donor selection},
   Author                   = {World Health Organization},
@@ -695,16 +705,6 @@
   Timestamp                = {2015.10.03}
 }
 
-@Article{mvpPotel,
-  Title                    = {MVP: Model-View-Presenter},
-  Author                   = {Mike Potel},
-  Journal                  = {Taligent},
-  Year                     = {1996},
-
-  Owner                    = {ilias},
-  Timestamp                = {2015.10.11}
-}
-
 @Book{prenskyGamification,
   Title                    = {Digital Game-Based Learning},
   Author                   = {Marc Prensky},
@@ -719,7 +719,6 @@
 @Article{citeulike:382810,
   Title                    = {MDA: A Formal Approach to Game Design and Game Research},
   Author                   = {Robin, Hunicke and Marc, Leblanc and Robert, Zubek},
-  Journal                  = {AAAI workshop},
   Year                     = {2004},
 
   Abstract                 = {{In this paper we present the MDA framework (standing for Mechanics, Dynamics, and Aesthetics), developed and taught as part of the Game Design and Tuning Workshop at the Game Developers Conference, San Jose 2001-2004.
@@ -751,23 +750,6 @@ MDA is a formal approach to understanding games {\OE} one which attempts to brid
   Location                 = {Toronto, Ontario, Canada},
   Numpages                 = {4},
   Url                      = {http://doi.acm.org/10.1145/2583008.2583033}
-}
-
-@Book{androidHacks,
-  Title                    = {50 Android Hacks},
-  Author                   = {Carlos Sessa},
-  Publisher                = {Manning Publications},
-  Year                     = {2013},
-
-  Owner                    = {ilias},
-  Timestamp                = {2015.10.11}
-}
-
-@Article{shaver2007impact,
-  Title                    = {Impact of the social media on Consumer Behavior in the United},
-  Author                   = {Shaver, Dan},
-  Journal                  = {University of Central Florida},
-  Year                     = {2007}
 }
 
 @Article{Stainsby01092000,
@@ -843,24 +825,6 @@ URN: urn:nbn:de:0114-fqs0501297},
   Keywords                 = {adverse reactions, haemovigilance, haemovigilance system, hemovigilance, International Haemovigilance Network, quality management, safety management, transfusion reactions},
   Publisher                = {Blackwell Publishing Ltd},
   Url                      = {http://dx.doi.org/10.1111/j.1423-0410.2010.01442.x}
-}
-
-@Article{1974,
-  Title                    = {Consumer Socialization},
-  Author                   = {Ward, Scott},
-  Journal                  = {Journal of Consumer Research},
-  Year                     = {1974},
-  Number                   = {2},
-  Pages                    = {pp. 1-14},
-  Volume                   = {1},
-
-  Abstract                 = {This paper traces the development of interest in consumer socialization. Major policy and conceptual issues are posed, and research in several areas of study is reviewed. Directions for research are specified in three key areas: consumer socialization processes, content of learning, and permanence of early learning.},
-  Copyright                = {Copyright © 1974 Journal of Consumer Research, Inc.},
-  ISSN                     = {00935301},
-  Jstor_formatteddate      = {Sep., 1974},
-  Language                 = {English},
-  Publisher                = {Oxford University Press},
-  Url                      = {http://www.jstor.org/stable/2489100}
 }
 
 @Book{circulatorySystem,
