--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -2,7 +2,29 @@
 \chapter{Τεχνολογίες}\label{ch:Development Stack}
 \section{Back-End}
 	\subsection{Cloud}
-	Μοντέλα υπηρεσιών
+	
+
+	To cloud computing (υπολογιστικό νέφος) όπως ορίζεται από το NIST (Εθνικό Ινστιτούτο Προτύπων και Τεχνολογίας)  είναι μια τεχνολογία, η οποία επιτρέπει την πρόσβαση από παντού, παρέχει μετά από αίτημα πρόσβαση στο δίκτυο για την κοινή χρήση προσαρμοστικών υπολογιστικών πόρων (π.χ., δίκτυα, servers, συστήματα αποθήκευσης, εφαρμογές και υπηρεσίες), μπορεί να ξεκινήσει και να αναπτυχθεί γρήγορα με ελάχιστη διαχείριση και χωρίς καμία αλληλεπίδραση με τον φορέα παροχής υπηρεσιών. \cite{cloudComputing} Το cloud computing παρέχει στους χρήστες και στις επιχειρήσεις διάφορες δυνατότητες για την αποθήκευση και την επεξεργασία των δεδομένων τους σε τρίτα κέντρα δεδομένων. \cite{Haghighat2015}
+	Το cloud computing ουσιαστικά στηρίζεται στην κατανομή των πόρων με στόχο την επίτευξη συνοχής και οικονομίας μέσω ενός δικτύου και την μεγιστοποίηση της απόδοσης τους. Οι πόροι του cloud δεν είναι μόνο διαμοιραζόμενοι από πολλούς χρήστες αλλά μπορούν και να ανακατανεμηθούν δυναμικά ανάλογα με την ζήτηση, γεγονός που μπορεί να χρησιμοποιηθεί όταν κατανέμονται στους διάφορους χρήστες.  Για παράδειγμα, μια cloud εγκατάσταση ηλεκτρονικών υπολογιστών οι οποία εξυπηρετεί Ευρωπαίους χρήστες στην διάρκεια των Ευρωπαϊκών εργάσιμων ωρών μπορεί να ανακατανείμει τους ίδιους πόρους για να εξυπηρετήσει χρήστες στην Βόρεια Αμερική κατά τις εργάσιμες ώρες της Βόρειας Αμερικής σε μία διαφορετική εφαρμογή. Αυτή η προσέγγιση βοηθά στην μεγιστοποίηση της χρήσης της υπολογιστικής ισχύος ενώ ταυτόχρονα μειώνεται το ολικό κόστος των φυσικών πόρων καθώς χρησιμοποιούμε λιγότερη ενέργεια, κλιματισμό κ.λ.π. για να διατηρείται το σύστημα.Με χρήση του cloud computing πολλοί χρήστες μπορούν να έχουν πρόσβαση σε έναν server και να ανακτούν και να ανανεώνουν τα δεδομένα τους χωρίς να αγοράζουν άδειες για όλες τις διαφορετικές εφαρμογές. 
+	Οι πάροχοι cloud συνήθως χρησιμοποιούν μοντέλο κοστολόγησης "πλήρωσε όσο χρησιμοποιήσεις".  Παρουσιάζει σπουδαιότητα λοιπόν το γεγονός ότι οι "πελάτες" μπορούν να εξοικονομήσουν χρηματικούς πόρους στο πέρασμα του χρόνου, καθώς χρησιμοποιώντας τους πόρους στο cloud, πληρώνουν μόνο για τους πόρους που χρησιμοποιούν και όχι για την αγορά και συντήρηση άφθονων μηχανημάτων (π.χ. εξυπηρετητών). Η λύση λοιπόν του cloud computing λοιπόν αποτελεί μία ιδιαίτερα ελκυστική προοπτική για τους χρήστες στους οποίους η χρήση των πόρων ποικίλλει σημαντικά καθώς και σε αυτούς στους οποίους  η αγορά μηχανημάτων και το κόστος συντήρησης τους αποτελούν σημαντικό τμήμα του προϋπολογισμού. 
+
+	Ένα πλήρες σύστημα υπολογιστικού νέφους αποτελείται από τα εξής βασικά συστατικά : 
+	\begin{itemize}
+	\item Πελάτες - υπολογιστές. Πρόκειται για τις συσκευές των τελικών χρηστών μέσω των οποίων αποκτούν πρόσβαση στο υπολογιστικό νέφος. Χωρίζονται σε τρεις κατηγορίες: τις κινητές συσκευές (mobile devices) που επιτρέπουν στον χρήστη την απομακρυσμένη πρόσβαση μετά από επεξεργασία του κατανεμημένου διακομιστή, τους παχείς πελάτες (thick clients) που είναι οι σταθεροί υπολογιστές ή τα λάπτοπ τα οποία συνδέονται στο cloud με χρήση ενός φυλλομετρητή και τους λεπτούς πελάτες (thin clients ) που είναι υπολογιστές με μικρή υπολογιστική ισχύς και χωρίς σκληρούς δίσκους, που εμφανίζουν τα δεδομένα αφού τα επεξεργαστεί πρώτα ο διακομιστής.
+	\item Κέντρο δεδομένων. Είναι το σύνολο των διακομιστών, όπου τρέχουν οι εφαρμογές. Στο κέντρο δεδομένων εμπίπτουν και οι εικονικοί διακομιστές (μπορεί σε έναν υπολογιστή να γίνει εγκατάσταση ώστε να επιτρέπεται η ταυτόχρονη ύπαρξη πολλαπλών στιγμιοτύπων από εικονικούς διακομιστές).
+	\item Κατανεμημένους διακομιστές. Οι διακομιστές αυτοί βρίσκονται σε διαφορετικές γεωγραφικές θέσεις, έτσι ώστε να εξασφαλίζεται μεγαλύτερη ευελιξία και υψηλότερη ασφάλεια στις παροχές που προσφέρει το cloud computing. Έτσι μπορούν να αντιμετωπιστούν αποτελεσματικά περιπτώσεις παραβίασης ασφάλειας ή ανάγκης επιπλέον αποθηκευτικού χώρου και υπολογιστικής δύναμης.
+	\end{itemize}		
+	\
+		Το μοντέλο cloud αποτελείται από πέντε βασικά χαρακτηριστικά:
+		\begin{itemize}
+		\item Αυτοεξυπηρέτηση μετά από ζήτηση (On-demand self-service). Ο χρήστης των υπηρεσιών του νέφους μπορεί να χρησιμοποιεί τους υπολογιστικούς πόρους που χρειάζεται, όπως χρόνο στον server και αποθηκευτικό χώρο,  αυτόματα και χωρίς να απαιτείται ανθρώπινη αλληλεπίδραση με τον φορέα παροχής υπηρεσιών. 
+		\item Ευρεία πρόσβαση στο δίκτυο (Broad network access). Οι δυνατότητες που προσφέρονται είναι διαθέσιμες μέσω του δικτύου και προσβάσιμες μέσω τυποποιημένων μηχανισμών που προωθούν την χρήση ετερογενών πλατφορμών λεπτών ή παχέων πελατών (π.χ., κινητά τηλέφωνα, τάμπλετ, υπολογιστές). 
+		\item Διάθεση των πόρων. Οι υπολογιστικοί πόροι των cloud παρόχων είναι συγκεντρωμένοι με χρήση ενός μοντέλου πολλαπλών ενοικιαστών (κάθε οργανισμός εργάζεται με ένα προσαρμοσμένο εικονικό στιγμιότυπο της εφαρμογής) έτσι ώστε να  μπορούν να ανατεθούν οι φυσικοί και εικονικοί πόροι ανάλογα με την ζήτηση των καταναλωτών. Οι παρεχόμενοι πόροι μπορεί να περιλαμβάνουν πόρους όπως μνήμη, επεξεργαστική ισχύ, εύρος δικτύου, εικονικές μηχανές.
+		\item Μεγάλη ελαστικότητα (Rapid Elasticity). Οι δυνατότητες του cloud computing παρέχονται με μεγάλη ταχύτητα και προσαρμοστικότητα , ώστε να είναι σε θέση να κλιμακώνουν πολύ γρήγορα ανάλογα με την ζήτηση που υπάρχει και να φαίνονται απεριόριστες σε οποιαδήποτε ποσότητα και χρονική στιγμή ζητηθούν. 
+		\item Μετρούμενη υπηρεσία (Measured Service). Τα cloud computing συστήματα πραγματοποιούν μετρήσεις, σε συγκεκριμένα επίπεδα αφαίρεσης ανάλογα με το είδος της υπηρεσίας (επεξεργασία, μνήμη, ενεργοί λογαριασμοί χρηστών). Με βάση αυτές τις μετρήσεις γίνεται έλεγχος και ενέργειες για την βελτιστοποίηση της χρήσης των πόρων. Επιπλέον η χρήση των πόρων παρακολουθείται, ελέγχεται και καταγράφεται με αποτέλεσμα την παροχή διαφάνειας μεταξύ του χρήστη και του παρόχου του cloud.
+		\end{itemize}	\cite{characteristicsCloud}\cite{nist}.
+
+	
 		\subsubsection{IaaS}
 		\subsubsection{PaaS}
 		\subsubsection{SaaS}
